--- a/Front-End-User/src/app/book-details/book-details.component.html
+++ b/Front-End-User/src/app/book-details/book-details.component.html
@@ -30,7 +30,7 @@
     </div>
     <div class="clearfix"></div>
     <p><strong>Summary:</strong> {{livre?.description}}</p>
-    <div class="container" style="padding-bottom: 4%;" *ngIf="livres?.content[0].id_book != livre.id_book ">
+    <div class="container" style="padding-bottom: 4%;" >
         <h4 class="section-title text-center">The Same Category </h4>
             <span class="underline center"></span>
     </div>
