--- a/Front-End-Admin/src/app/compte/compte.component.html
+++ b/Front-End-Admin/src/app/compte/compte.component.html
@@ -10,7 +10,7 @@
                     <div>Liste des demandes d'inscription
                         <div class="page-title-subheading">
                             <button class="btn btn-link" (click)="touAfficher()">Tout Afficher<span class="badge badge-pill badge-primary">{{ allPage_nbr }}</span></button>
-                            <button class="btn btn-link">Cette Annee<span class="badge badge-pill badge-success">6</span></button>
+                            <button class="btn btn-link" (click)="anneeAfficher()">Cette Annee<span class="badge badge-pill badge-success">6</span></button>
                             <button class="btn btn-link">Ce Mois-ci<span class="badge badge-pill badge-danger">6</span></button>
                             <button class="btn btn-link" (click)="touAfficher()">Ajourd'hui<span class="badge badge-pill badge-warning">6</span></button>
                         </div>
