--- a/Front-End-Admin/src/app/header/header.component.html
+++ b/Front-End-Admin/src/app/header/header.component.html
@@ -45,13 +45,16 @@
                                 </a>
                                 <div tabindex="-1" role="menu" aria-hidden="true"
                                     class="dropdown-menu dropdown-menu-right">
-                                    <button type="button" tabindex="0" class="dropdown-item">User
-                                        Account</button>
-                                    <button type="button" tabindex="0" class="dropdown-item">Settings</button>
-                                    <h6 tabindex="-1" class="dropdown-header">Header</h6>
-                                    <button type="button" tabindex="0" class="dropdown-item">Actions</button>
-                                    <div tabindex="-1" class="dropdown-divider"></div>
-                                    <button type="button" tabindex="0" class="dropdown-item">Dividers</button>
+                                    <button type="button" tabindex="0" class="dropdown-item" [routerLink]="['/comptes']">
+                                        <i class="nav-link-icon lnr-book"> </i>
+                                        <span>Demandes</span>
+                                        <div class="ml-auto badge badge-pill badge-danger">{{ allPage_nbr }}</div>
+                                    </button>
+                                    <button type="button" tabindex="0" class="dropdown-item" [routerLink]="['/emprunts']">Effectuer des Emprunts</button>
+                                    <!-- <h6 tabindex="-1" class="dropdown-header">Header</h6> -->
+                                    <button type="button" tabindex="0" class="dropdown-item" [routerLink]="['/livres']">Livres</button>
+                                    <!-- <div tabindex="-1" class="dropdown-divider"></div> -->
+                                    <button type="button" tabindex="0" class="dropdown-item" [routerLink]="['/categories']">Categories</button>
                                 </div>
                             </div>
                         </div>
